k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-demo
  namespace: jenkins-k8s
  labels:
    app: jenkins-demo
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30002  #映射端口
  selector:
    app: jenkins-demo

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-demo
  namespace: jenkins-k8s
  labels:
    app: jenkins-demo
spec:
  replicas: 4
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jenkins-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jenkins-demo
    spec:
      imagePullSecrets:
      - name: harbor
      containers:
      - name: k8s-demo
        image: reg.analyticservice.net/jenkins/jenkins-demo:<BUILD_TAG>
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080  #容器端口
